tests/NormalTests/paczka1/small_fuzzy/60461649.err
Error in line 2: 3IHZFDt S767 35,2
Error in line 9: vhkkb A357 54,0
Error in line 6: KFCFXNm S767 47,1
